# DeepKnight

./: .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: analysis.py  coach.py  game.py
backend/app/chess/: fen_utils.py  game_manager.py  pgn_utils.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  models.py  session.py
backend/app/engine/: alphabeta.py  encoding.py  engine_service.py  evaluation.py  levels.py  minimax.py  move_ordering.py
backend/app/genai/: coach_service.py  prompts.py  summarizer.py
backend/app/ml/inference/: predictor.py
backend/app/ml/models/: value_net.py
backend/app/ml/training/: dataset.py  dummy_data.py  evaluate.py  train.py
backend/app/schemas/: analysis.py  coach.py  game.py
backend/app/tests/: conftest.py  test_analysis.py  test_coach.py  test_engine.py  test_game_api.py
backend/migrations/: env.py
data/models/: value_net.pt  value_net_best.pt
docs/: api.md  architecture.md  deployment.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AnalysisPanel.tsx  ChessBoard.tsx  CoachChat.tsx  CyberLayout.tsx  DifficultySelector.tsx  Header.tsx  MoveHistory.tsx  NewGameButton.tsx
frontend/src/hooks/: useAnalysis.ts  useCoach.ts  useGame.ts
mlops/: dvc.yaml  mlflow_notes.md  params.yaml
(+6 files in other folders)
